infra/k8s/overlays/shared-dev/ingress-hosts-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dq-ingress-frontend
spec:
  tls:
    - hosts:
        - dq-made-easy.dev.jac.dot
      secretName: dq-dev-tls-cert
  rules:
    - host: dq-made-easy.dev.jac.dot
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dq-ingress-openmetadata
spec:
  tls:
    - hosts:
        - openmetadata.dev.jac.dot
      secretName: dq-dev-openmetadata-tls-cert
  rules:
    - host: openmetadata.dev.jac.dot
